<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityMain">

    <!-- background -->
    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_green_blue" >

    <!-- main view image -->
    <ImageView
        android:id="@+id/imv_main"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/bim_main_picture"
        android:src="@drawable/bmi_main_picture" />

    <!-- title text -->
    <TextView
        android:id="@+id/edt_titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textColor="@color/dark_beige"
        android:textSize="@dimen/large_font"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!-- height -->
    <EditText
        android:id="@+id/edt_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_height"
        android:inputType="numberSigned"
        android:textColor="@color/grey"
        android:textSize="@dimen/medium_font"
        android:layout_gravity="center"
        android:layout_marginTop="500dp"
        android:autofillHints="@string/your_height"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- weight -->
    <EditText
        android:id="@+id/txt_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_weight"
        android:inputType="numberSigned"
        android:textColor="@color/grey"
        android:textSize="@dimen/medium_font"
        android:layout_gravity="center"
        android:layout_marginTop="560dp"
        android:autofillHints="@string/your_weight"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="2"
        android:gravity="center"
        android:layout_marginTop="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <!-- calculate button -->
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:text="@string/calculate"
        android:textColor="@color/light_green_blue"
        android:background="@drawable/round_button"
        android:textSize="@dimen/medium_font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <!-- result text view -->
    <TextView
        android:id="@+id/tv_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textColor="@color/orange"
        android:textSize="@dimen/medium_font"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


